--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
 		"lint:fix": "eslint src/**/*.{js,jsx,ts,tsx} --fix"
 	},
 	"dependencies": {
+		"@reduxjs/toolkit": "^1.9.7",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
+		"react-redux": "^8.1.3",
 		"semantic-ui-css": "^2.5.0",
 		"semantic-ui-react": "^2.1.4"
 	},
