--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
 	"dependencies": {
 		"@reduxjs/toolkit": "^1.9.7",
 		"axios": "^1.6.1",
+		"clsx": "^2.0.0",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-redux": "^8.1.3",
 		"semantic-ui-css": "^2.5.0",
-		"semantic-ui-react": "^2.1.4"
+		"semantic-ui-react": "^2.1.4",
+		"socket.io-client": "^4.7.2"
 	},
 	"devDependencies": {
 		"@types/react": "^18.0.28",
